--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http": "0.0.0",
     "knex": "^0.19.3",
     "logger": "0.0.1",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "nodemon": "^1.19.2",
