--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.4",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
     "express-session": "^1.16.2",
     "http": "0.0.0",
     "knex": "^0.19.3",
