--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "v1",
   "version": "1.0.0",
   "description": "WD mini project",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon server.js"
   },
   "author": "Rashmil Priyal Preet Richa",
   "license": "ISC",
