--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,3 @@
-USER=<your username for the database>
-PASSWORD=<your corresponding password>
-
-<remove everything in <> including the signs and rename the file to .env also remove this line when in use>
+USER=root
+PASSWORD=sql root password
+PATHdir=/path/to/your/project/public
