added readme file

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,5 @@
 USER=root
 PASSWORD=sql root password
 PATHdir=/path/to/your/project/public
+EmailID=email id over here
+EMAILPASS=your email id password
