--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "author": "Rashmil Priyal Preet Richa",
+  "author": "Rashmil Priyal Richa",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.19.2"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
@@ -19,13 +22,11 @@
     "express-fileupload": "^1.1.5",
     "express-session": "^1.16.2",
     "http": "0.0.0",
-    "knex": "^0.19.3",
+    "knex": ">=0.19.5",
     "logger": "0.0.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
-    "mysql2": "^1.7.0",
     "nodemailer": "^6.3.0",
-    "nodemon": "^1.19.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7"
